--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.14.1",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xlsx": "^0.18.5",
-    "firebase": "^10.0.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.48.0",
     "eslint-config-next": "13.5.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.29"
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.0"
   }
-} 
+}
